Changes for embedded images in Olog client